--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-APP_SECRET=''
+APP_SECRET='HGjhvhIHIU7*((&*(&89IHB'
 DB_HOST='localhost'
 DB_PORT='5432'
 DB_USERNAME='postgres'
 DB_PASSWORD='root'
 DB_NAME='quiz'
-JWT_SECRET='HGjhvhIHIU7*((&*(&89IHB'
