--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "geoip-lite": "^1.4.7",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -45,7 +46,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
-    "typeorm": "^0.3.10"
+    "typeorm": "^0.3.10",
+    "ua-parser-js": "^1.0.35"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.10",
